# corvus

./: CMakeLists.txt  README.md
include/: cell.h  wif.h
source/: cell.cpp  wif.cpp
test/: deduce_draft.cpp  read_wif.cpp
